--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "description": "Mern Shopping store",
   "main": "server.js",
+  "type":"module",
   "scripts": {
-    "start": "node backend/server"
+    "start": "node backend/server",
+    "server": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Raja",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
